--- a/src/app/components/book-cart/book-cart.component.html
+++ b/src/app/components/book-cart/book-cart.component.html
@@ -1,8 +1,5 @@
-
-
-
 <div class="cart">
-
+ 
   <div class="cart1">
     <div class="cart-head">
      <strong class="title">My Cart({{ cartItems.length }})</strong>
@@ -17,12 +14,12 @@
      </div>
      
     </div>
-
+ 
     <br><br>
     <br>
     <div class="cart-body">
-
-
+ 
+ 
       <div class="product" *ngFor="let item of cartItems">
       <img class="img" width="80px" src="../../../assets/book-images/Image 11.png" alt="">
       <div class="item-details">
@@ -32,124 +29,154 @@
          
         <div class="quantity">
           <div class="btns">
-          <button (click)="onDecrement()" class="btn">-</button>
-          <input  readonly class="input" type="text" value="{{item.product_id.quantity}}" >
-          <button (click)="onIncrement()" class="btn">+</button>
+          <button (click)="handleUpdateCartBtn('decreament',item._id)" class="btn">-</button>
+          <input  readonly class="input" type="text" value="{{item.quantityToBuy}}" >
+          <button (click)="handleUpdateCartBtn('increament',item._id)" class="btn">+</button>
         </div>
         <strong (click)="removeCartItem(item._id)">Remove</strong>
           </div>
-        
+       
       </div>
     </div>
-    
-
+   
+ 
     </div>
-
-
-
+ 
+ 
+ 
     <br>
     <div class="cart-footer">
      
-
-
+ 
+ 
       <button class="Order"  *ngIf="isBtnVisible" (click)="showCart2()">Place Order</button>
     </div>
   </div>
-
-
-
-
+ 
+ 
+ 
+ 
   <div class="cart2" *ngIf="isCart2Visible">
     <div class="cart-head">
      <strong class="title2">Customer Details</strong>
      <div class="select-main">
-     <h5 class="Add-new-address">Add New Address</h5>
+   
      </div>
      
     </div>
-
+ 
     <br>
     <div class="cart-body">
-     <form action="post">
-
-      <div class="name">
-        <input  class="form" type="text" placeholder="Full-Name" name="" id="">
-        <input  class="form"  type="text " placeholder="Mobile Number" name="" id="">
-      </div>
-     
-      <input  class="form2"  type="text " placeholder="Address" name="" id="">
-     
-      <div class="city">
-        <input  class="form"  placeholder="City" type="text" name="" id="">
-        <input   class="form" placeholder="State" type="text" name="" id="">
-      </div>
-
-      <br>
-      <div class="type">
-        <h3>Type</h3>
-        
-        <div class="radio">
-          <div class="option1">
-            <input style="color: rgb(107, 1, 1);" type="radio" name="opt" id="">
-            <h4>Home</h4>
-          </div>
-          <div class="option2">
-            <input type="radio" name="opt" id="">
-            <h4>Work</h4>
-          </div>
-<div class="option3">
-            <input type="radio" name="opt" id="">
-            <h4>Other</h4>
-          </div>
-
-          
+      <div class="profile-main-customerAdd">
+        <div class="profile-main-customerAdd-header">
+            <h1>Address Details</h1>
+            <div class="profile-main-customerAdd-header-sub" (click)="add_new_add()">Add New Address</div>
         </div>
-      </div>
-      
-     </form>
-
+        <div class="profile-main-customerAdd-span" *ngFor="let addressData of customerDetails">
    
-
-
-  
+            <div *ngIf="shouldShowFirstDiv(addressData)" >
+                <div style="display: flex; justify-content: space-between;">
+                    <h2 style="margin: 0;">{{addressData.addressType}}</h2>
+                    <p style="color: #A03037;cursor: pointer;" (click)="toggleDivs(addressData)">Edit</p>
+                </div>
+                <h3 style="margin: 0;">Address</h3>
+               <span>{{addressData.fullAddress}} , {{addressData.city}}, {{addressData.state}} </span>
+            </div>
  
-    
-     
-
+            <div class="profile-main-address-Details" *ngIf="!shouldShowFirstDiv(addressData)" >
+                <div class="profile-main-address-Details-header">
+                    <!-- <h1>Address Details</h1> -->
+                    <!-- <div class="profile-main-address-Details-header-sub">Add New Address</div> -->
+                </div>
+                <div class="profile-main-address-Details-Subheader">
+                    <h2>1. {{customerAddType}}</h2>
+                    <!-- <p style="color: #A03037; cursor: pointer;" (click)="CDenableEditing()" >Edit</p> -->
+                </div>
+                <div class="profile-main-address-Details-main">
+                    <p >Address</p>
+                    <input type="text" placeholder="Full Address" [disabled]="CDisDisabled" [(ngModel)]="customerAddress">
+                </div>
+                <div class="profile-main-address-Details-sub">
+                    <div class="profile-main-address-Details-sub2">
+                        <p>City/town</p>
+                        <input type="text" placeholder="City" [disabled]="CDisDisabled" [(ngModel)]="customerCity">
+                    </div>
+                    <div class="profile-main-address-Details-sub2">
+                        <p>State</p>
+                        <input type="text" placeholder="State" [disabled]="CDisDisabled" [(ngModel)]="customerState">
+                    </div>
+       
+                </div>
+                <div class="profile-main-address-Details-worktype">
+                    <p>Type</p>
+                   <div class="profile-main-address-Details-worktype-radio">
+                   <div>
+                    <input type="radio" id="home" name="location" value="Home" [(ngModel)]="customerAddType">
+                    <label for="home">Home</label>
+                   </div>
+                   
+                  <div>  
+                    <input type="radio" id="work" name="location" value="Office" [(ngModel)]="customerAddType">
+                    <label for="work">Work</label>
+                  </div>
+                   
+                    <div>
+                        <input type="radio" id="other" name="location" value="Other" [(ngModel)]="customerAddType">
+                    <label for="other">Other</label>
+                    </div>
+                   </div>
+                </div>
+       
+                <!-- <button *ngIf="!CDisDisabled" (click)="saveAddress()">Save</button> -->
+                <button (click)="saveAddress()">Save</button>
+       
+       
+            </div>
+           
+           
+       </div>
     </div>
-    
-    
+ 
+ 
+ 
+ 
+   
+     
+ 
+    </div>
+   
+   
     <div class="option4">
-      
-            
+     
+           
       <button *ngIf="isBtnVisible2"  class="Order2" (click)="showCart3()" >Place Order</button>
     </div>
   </div>
-
-
+ 
+ 
   <div class="card2" *ngIf="isCard2Visible">
     <strong>Address Details</strong>
   </div>
-
+ 
   <div class="card3" *ngIf="isCard3Visible">
     <strong>Order Summary</strong>
   </div>
-
-
+ 
+ 
   <div class="cart3" *ngIf="isCart3Visible" >
     <strong>Order Summary</strong>
-
+ 
     <div class="order-summary" >
     <div class="cart-head">
      
-    
-      
+   
+     
      </div>
  
      <br>
-    
-     <div class="cart-body" *ngFor="let item of cartItems">
-      
+   
+     <div class="cart-body2" *ngFor="let item of cartItems">
+     
        <img class="img" width="80px" src="../../../assets/book-images/Image 11.png" alt="">
        <div class="item-details">
         <h3 class="txt">{{item.product_id.bookName}}</h3>
@@ -157,13 +184,13 @@
         <strong >Rs. {{item.product_id.price}}</strong>
          
        </div>
-
+ 
      </div>
-  
+ 
  
  
      <br>
-    
+   
     </div>
     <div class="cart-footer2">
        
@@ -171,8 +198,8 @@
       <button  class="Order" (click)="orderPlaced()">Checkout</button>
     </div>
    </div>
-  
+ 
 </div>
-
+ 
 <br><br>
 <br><br>
