--- a/src/app/components/book-cart/book-cart.component.scss
+++ b/src/app/components/book-cart/book-cart.component.scss
@@ -1,363 +1,553 @@
- .cart-head{
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-   
- }
- .cart-body{
-    margin: 10px;
-   
-    justify-content: left;
-    gap: 12px;
-    
-   
- }
-
- .order-summary{
-  margin-top: 5%;
+.cart-head{
   display: flex;
   flex-direction: row;
-  justify-content: space-around;
- }
-
- .product{
-  margin-bottom: 5%;
-  display: flex;
-  flex-direction: row;
- }
- .img{
-    margin-right: 3%;
- }
- .btns{
-    display: flex;
-    flex-direction: row;
-    gap: 10px;
-    justify-content: flex-start;
-    align-items: center;
- }
- .btn{
-    padding: 2%;
-    height: 25px;
-    width: 25px;
-    align-items: center;
-    border-radius: 50%;
-    border: none;
- }
- .input{
-    width: 30px;
-    border: 1px solid gray; 
-    border-radius: 5px;
- }
-
- .quantity{
-    display: flex;
-  margin-top: 5%;
-    padding: 1%;
-    gap: 15px;
-    align-items: center;
-
- }
- .cart-footer{
-    margin-left:2%;
-    display: flex;
-    flex-direction: row;
-    justify-content: end;
-    margin-right: 2%;
-   
- }
-  .cart-footer2{
-    margin-left:2%;
-    display: flex;
-    flex-direction: row;
-    justify-content: flex-end;
-   
- }
- .cart{
-    width: 80%;
-    margin-left: 10%;  
-   
- }
-
- .cart1{
-   border: 2px solid rgba(176, 174, 174, 0.338);
-   padding: 3%;
+  justify-content: space-between;
  
-   margin-bottom: 2%;
-   border-radius:3px ;
- }
+}
+.cart-body{
+  margin: 10px;
+ 
+  justify-content: left;
+  gap: 12px;
+ 
+ 
+}
+ 
+ 
+.cart-body2{
+  margin: 10px;
+ width: 125px;
+ height: 300px;
+  justify-content: left;
+  gap: 12px;
+ 
+ 
+}
+ 
+.order-summary{
+margin-top: 5%;
+display: flex;
+flex-direction: row;
+flex-wrap: wrap;
+ 
+}
+ 
+.product{
+align-items: center;
+margin-bottom: 5%;
+display: flex;
+flex-direction: row;
+}
+.img{
+  margin-right: 3%;
+}
+.btns{
+  display: flex;
+  flex-direction: row;
+  gap: 10px;
+  justify-content: flex-start;
+  align-items: center;
+}
+.btn{
+  padding: 2%;
+  height: 25px;
+  width: 25px;
+  align-items: center;
+  border-radius: 50%;
+  border: none;
+}
+.input{
+  width: 30px;
+  border: 1px solid gray;
+  border-radius: 5px;
+}
+ 
+.quantity{
+  display: flex;
+margin-top: 5%;
+  padding: 1%;
+  gap: 15px;
+  align-items: center;
+ 
+}
+.cart-footer{
+  margin-left:2%;
+  display: flex;
+  flex-direction: row;
+  justify-content: end;
+  margin-right: 2%;
+ 
+}
+.cart-footer2{
+  margin-left:2%;
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-end;
+ 
+}
+.cart{
+  width: 80%;
+  margin-left: 10%;  
+ 
+}
+ 
+.cart1{
+ border: 2px solid rgba(176, 174, 174, 0.338);
+ padding: 3%;
+ 
+ margin-bottom: 2%;
+ border-radius:3px ;
+}
 .card2{
-    border: 2px solid rgba(176, 174, 174, 0.338);
-    padding: 3%;
-    margin: 5%;
-    // margin-left: 10%;
-    // margin-right: 10%;
-
+  border: 2px solid rgba(176, 174, 174, 0.338);
+  padding: 3%;
+  margin: 5%;
+  // margin-left: 10%;
+  // margin-right: 10%;
+ 
 }
 .card3{
-    border: 2px solid rgba(176, 174, 174, 0.338);
-    padding: 3%;
-    margin: 5%;
-    // margin-left: 10%;
-    // margin-right: 10%;
+  border: 2px solid rgba(176, 174, 174, 0.338);
+  padding: 3%;
+  margin: 5%;
+  // margin-left: 10%;
+  // margin-right: 10%;
 }
-
- .cart2{
-    border: 2px solid rgba(176, 174, 174, 0.338);
-   padding: 3%;
-   margin: 5%;
-   margin-top: 2%;
-   margin-bottom: 0%;
-   border-radius:3px ;
- }
- .txt{
- word-wrap: break-word;
- }
-
- .cart3{
-    border: 2px solid rgba(176, 174, 174, 0.338);
-   padding: 3%;
-   margin: 5%;
-   margin-top: 2%;
-   display: flex;
-  flex-wrap: wrap;
-  gap: 10px;
-   border-radius:3px ;
-   margin-bottom: 10%;
- }
- .select-main{
-    display: flex;
- }
-
-
- .select{
-    padding: 10px 15px;
-    padding-right: 55px;
- }
- .Order,.Order2{
-    background-color: #2d7bcf ;
-    border-radius: 2px;
-    opacity: 1;
-    border: none;
-    padding: 10px 20px;
-    color: white;
-
- }
- .form{
-    padding: 10px 35px;
-    margin: 1%;
-    border: 2px solid rgba(176, 174, 174, 0.338);
- }
- .form2{
-    padding: 10px 35px;
-    margin: 1%;
-    width: 86%;
-    height: 20%;
-    border: 2px solid rgba(176, 174, 174, 0.338);
- }
+ 
+.cart2{
+  border: 2px solid rgba(176, 174, 174, 0.338);
+ padding: 3%;
+ margin: 5%;
+ margin-top: 2%;
+ margin-bottom: 0%;
+ border-radius:3px ;
+}
+.txt{
+word-wrap: break-word;
+}
+ 
+.cart3{
+  border: 2px solid rgba(176, 174, 174, 0.338);
+ padding: 3%;
+ margin: 5%;
+ margin-top: 2%;
+ display: flex;
+flex-wrap: wrap;
+gap: 10px;
+ border-radius:3px ;
+ margin-bottom: 10%;
+}
+.select-main{
+  display: flex;
+}
+ 
+ 
+.select{
+  padding: 10px 15px;
+  padding-right: 55px;
+}
+.Order,.Order2{
+  background-color: #2d7bcf ;
+  border-radius: 2px;
+  opacity: 1;
+  border: none;
+  padding: 10px 20px;
+  color: white;
+ 
+}
+.form{
+  padding: 10px 35px;
+  margin: 1%;
+  border: 2px solid rgba(176, 174, 174, 0.338);
+}
+.form2{
+  padding: 10px 35px;
+  margin: 1%;
+  width: 86%;
+  height: 20%;
+  border: 2px solid rgba(176, 174, 174, 0.338);
+}
 .option1,.option2,.option3{
 display: flex;
 align-items: flex-start;
 flex-direction: row;
 }
 .option4{
-    display: flex;
-    align-items: flex-start;
-    flex-direction: row-reverse;
-   
+  display: flex;
+  align-items: flex-start;
+  flex-direction: row-reverse;
+ 
 }
- .name,.city{
-    display: flex;
-    flex-direction: row;
-   
-    
- }
+.name,.city{
+  display: flex;
+  flex-direction: row;
+ 
+ 
+}
 .item-details{
+display: flex;
+flex-direction: column;
+ 
+}
+.radio{
+  width: 100%;
+margin-bottom: 2%;
+  display: flex;
+  justify-content: space-between;
+  flex-direction: row;
+}
+.Order,.Order2:hover{
+  background-color: #36b403 ;
+  border-radius: 2px;
+  opacity: 1;
+  border: none;
+  padding: 10px 20px;
+  color: white;
+  transition: 1s;
+  animation-fill-mode: forwards;
+  cursor: pointer;
+ 
+}
+ 
+.Add-new-address{
+  padding: 10px 35px;
+  border: 2px solid #a03037c9;
+  opacity: 1;
+  border-radius: 2px;
+}
+ 
+@media (max-width: 767px) {
+  .cart {
+    width: 90%;
+  }
+ 
+  .cart1,
+  .cart2,
+  .cart3 {
+    margin: 5%;
+  }
+  .option4{
+     justify-content: center;
+  }
+ 
+ 
+ 
+  .cart-head,
+  .cart-body,
+  .cart-footer,
+  .cart-footer2 {
+    flex-direction: column;
+    align-items: center;
+  }
+.title,.title2{
+  margin-bottom: 10%;
+}
+  .quantity {
+    margin-left: 0;
+ 
+    text-align: center;
+    justify-content: center;
+  }
+  .item-details{
+      text-align: center;
+   
+  }
+ 
+  .btn {
+    padding: 5%;
+    height: 35px;
+    width: 35px;
+  }
+ 
+  .input {
+    width: 50px;
+  }
+ 
+  .form,
+  .form2 {
+    width: 100%;
+    padding: 10px;
+  }
+ 
+  .select {
+    width: 100%;
+    padding: 10px;
+  }
+}
+ 
+.Order{
+ 
+  margin-top: 10%;
+  margin-bottom: 5%;
+  background-color: #2d7bcf ;
+}
+ 
+ 
+ 
+.Order:hover{
+ 
+  margin-top: 10%;
+  margin-bottom: 5%;
+  background-color: #00a619 ;
+}
+.Order{
+  align-self: center;
+  margin-top: 10%;
+  margin-bottom: 5%;
+}
+ 
+ 
+/* For tablets and larger screens */
+@media (min-width: 768px) {
+  .cart {
+    width: 70%;
+  }
+ 
+  .cart1, .cart2, .cart3 {
+    margin: 5%;
+  }
+ 
+  .form{
+      width: 85%;
+  }
+  .form2{
+      width: 82%;
+  }
+ 
+  .cart-head, .cart-body, .cart-footer, .cart-footer2 {
+    flex-direction: row;
+  }
+ 
+ 
+}
+ 
+/* For mobile screens */
+@media (max-width: 767px) {
+  .cart {
+    width: 90%;
+  }
+ 
+  .cart1, .cart2, .cart3 {
+    margin: 5%;
+  }
+ 
+  .cart-head, .cart-body, .cart-footer, .cart-footer2 {
+    flex-direction: column;
+    align-items: center;
+  }
+ 
+  .quantity {
+    margin-left: 0;
+    justify-content: center;
+    flex-direction: column;
+  }
+ 
+  .btn {
+    padding: 5%;
+    height: 35px;
+    width: 35px;
+  }
+ 
+  .input {
+    width: 50px;
+  }
+ 
+  .form, .form2 {
+    width: 91%;
+    padding: 10px;
+  }
+ 
+  .select {
+    width: 100%;
+    padding: 10px;
+  }
+}
+ 
+.footer{
+   
+  background-color:#2E1D1E ;
+  width: 89%;
+  height: 5%;
+  padding: 1%;
+  color: rgb(204, 204, 204);
+  padding-left: 10%;
+ 
+ 
+}
+ 
+.profile-main-ctn{
   display: flex;
   flex-direction: column;
-
-}
- .radio{
-    width: 100%;
-  margin-bottom: 2%;
-    display: flex;
-    justify-content: space-between;
-    flex-direction: row;
- }
- .Order,.Order2:hover{
-    background-color: #36b403 ;
-    border-radius: 2px;
-    opacity: 1;
-    border: none;
-    padding: 10px 20px;
-    color: white;
-    transition: 1s;
-    animation-fill-mode: forwards;
-    cursor: pointer;
-
- }
-
- .Add-new-address{
-    padding: 10px 35px;
-    border: 2px solid #a03037c9;
-    opacity: 1;
-    border-radius: 2px;
- }
-
- @media (max-width: 767px) {
-    .cart {
-      width: 90%;
-    }
-  
-    .cart1,
-    .cart2,
-    .cart3 {
-      margin: 5%;
-    }
-    .option4{
-       justify-content: center;
-    }
-
-    
-  
-    .cart-head,
-    .cart-body,
-    .cart-footer,
-    .cart-footer2 {
-      flex-direction: column;
-      align-items: center;
-    }
-  .title,.title2{
-    margin-bottom: 10%;
-  }
-    .quantity {
-      margin-left: 0;
-
-      text-align: center;
-      justify-content: center;
-    }
-    .item-details{
-        text-align: center;
-      
-    }
-  
-    .btn {
-      padding: 5%;
-      height: 35px;
-      width: 35px;
-    }
-  
-    .input {
-      width: 50px;
-    }
-  
-    .form,
-    .form2 {
-      width: 100%;
-      padding: 10px;
-    }
-  
-    .select {
-      width: 100%;
-      padding: 10px;
-    }
-  }
-
-  .Order{
-  
-    margin-top: 10%;
-    margin-bottom: 5%;
-    background-color: #2d7bcf ;
-  }
-
-
-  
-  .Order:hover{
-  
-    margin-top: 10%;
-    margin-bottom: 5%;
-    background-color: #00a619 ;
-  }
-  .Order{
-    align-self: center;
-    margin-top: 10%;
-    margin-bottom: 5%;
-  }
-
-
-  /* For tablets and larger screens */
-@media (min-width: 768px) {
-    .cart {
-      width: 70%;
-    }
-  
-    .cart1, .cart2, .cart3 {
-      margin: 5%;
-    }
-
-    .form{
-        width: 85%;
-    }
-    .form2{
-        width: 82%;
-    }
-  
-    .cart-head, .cart-body, .cart-footer, .cart-footer2 {
-      flex-direction: row;
-    }
-  
-   
-  }
-  
-  /* For mobile screens */
-  @media (max-width: 767px) {
-    .cart {
-      width: 90%;
-    }
-  
-    .cart1, .cart2, .cart3 {
-      margin: 5%;
-    }
-  
-    .cart-head, .cart-body, .cart-footer, .cart-footer2 {
-      flex-direction: column;
-      align-items: center;
-    }
-  
-    .quantity {
-      margin-left: 0;
-      justify-content: center;
-      flex-direction: column;
-    }
-  
-    .btn {
-      padding: 5%;
-      height: 35px;
-      width: 35px;
-    }
-  
-    .input {
-      width: 50px;
-    }
-  
-    .form, .form2 {
-      width: 91%;
-      padding: 10px;
-    }
-  
-    .select {
-      width: 100%;
-      padding: 10px;
-    }
-  }
-  
-  .footer{
-     
-    background-color:#2E1D1E ;
-    width: 89%;
-    height: 5%;
-    padding: 1%;
-    color: rgb(204, 204, 204);
-    padding-left: 10%;
+  margin-top: 50px;
+  align-items: center;
+  justify-content: center;
+  gap: 20px;
  
-
+}
+ 
+.profile-main-personalDetails{
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  margin: 0 auto;
+ 
+}
+ 
+.profile-main-personalDetails-heading{
+  display: flex;
+  gap: 10px;
+  align-items: center;
+ 
+  .edit{
+      color: #A03037;
+      cursor: pointer;
   }
+}
+ 
+.profile-main-personalDetails-subctn{
+  display: flex;
+  flex-direction: column;
+  p{
+      margin: 0px;
+  }
+ 
+  input {
+          width: 511px;
+          height: 40px;
+          background: #F5F5F5 0% 0% no-repeat padding-box;
+          border: 1px solid #E2E2E2;
+          border-radius: 2px;
+          padding-left: 10px;
+      }
+ 
+}
+ 
+// ******
+.profile-main-customerAdd{
+  width: 80%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin-top: 50px;
+  gap: 20px;
+ 
+}
+.profile-main-customerAdd-span{
+  // border: 1px solid black;
+  display: flex;
+  flex-direction: column;
+  // gap: 10px;
+  // margin: 20px auto;
+ 
+  padding: 12px;
+  width: 50%;
+ 
+ 
+ 
+}
+ 
+.profile-main-address-Details{
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  margin: 10px auto;
+ 
+  button{
+      background-color: #3371B5;
+      width: 70px;
+      height: 30px;
+      color: white;
+      border: none;
+      border-radius: 10px;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      margin-left: 85%;
+      margin-top: 4%;
+      cursor: pointer;
+  }
+ 
+}
+.profile-main-address-Details-header{
+  display: flex;
+  justify-content: space-between;
+ 
+      .profile-main-address-Details-header-sub {
+          width: 123px;
+          height: 29px;
+          align-content: center;
+          padding-left: 20px;
+          background: #FFFFFF 0% 0% no-repeat padding-box;
+          border: 1px solid #A03037;
+          border-radius: 2px;
+          font: normal normal normal 12px/16px Roboto;
+              letter-spacing: 0px;
+              color: #A03037;
+  }
+}
+ 
+.profile-main-address-Details-Subheader{
+  display: flex;
+  align-items: center;
+  gap: 20px;
+ 
+}
+ 
+.profile-main-address-Details-main{
+  input{
+      width: 512px;
+      height: 62px;
+      /* UI Properties */
+      background: #F5F5F5 0% 0% no-repeat padding-box;
+      border: 1px solid #DCDCDC;
+      border-radius: 2px;
+  }
+ 
+}
+ 
+.profile-main-address-Details-sub{
+  display: flex;
+  justify-content: space-between;
+  input{
+         width: 241px;
+          height: 45px;
+          background: #F5F5F5 0% 0% no-repeat padding-box;
+          border: 1px solid #DCDCDC;
+          border-radius: 2px;
+          padding-left: 10px;
+  }
+}
+ 
+.profile-main-address-Details-worktype-radio{
+  display: flex;
+  gap: 50px;
+  align-items: center;
+}
+ 
+.profile-main-customerAdd-header{
+  display: flex;
+  width: 50%;
+  justify-content: space-between;
+  align-items: center;
+ 
+ 
+ 
+}
+ 
+.profile-main-customerAdd-header-sub{
+  width: 123px;
+          height: 29px;
+          cursor: pointer;
+          align-content: center;
+          padding-left: 20px;
+          background: #FFFFFF 0% 0% no-repeat padding-box;
+          border: 1px solid #A03037;
+          border-radius: 2px;
+          font: normal normal normal 12px/16px Roboto;
+              letter-spacing: 0px;
+              color: #A03037;
+ 
+       
+ 
+}
